analysis/symbol-light-classes/testData/lightClassByFqName/compilationErrors/JvmOverloadsActualOverrideWithInheritedDefaults.java
public final class Derived /* common.pack.Derived*/ extends common.pack.Base {
  @java.lang.Override()
  @kotlin.Suppress(names = {"OVERLOADS_WITHOUT_DEFAULT_ARGUMENTS"})
  @kotlin.jvm.JvmOverloads()
  public void foo(int, int, int);//  foo(int, int, int)

  public  Derived();//  .ctor()
}
